--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,8 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "6.3",
     "morgan": "^1.10.0",
-    "mysql2": "^3.6.3",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
