--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "6.3",
+    "mongoose": "^8.0.1",
     "morgan": "^1.10.0",
     "socket.io": "^4.7.2"
   },
